--- a/index.html
+++ b/index.html
@@ -256,6 +256,110 @@
             background: linear-gradient(transparent, white);
             pointer-events: none;
         }
+
+        /* Media Queries for Responsive Design */
+        @media screen and (max-width: 768px) {
+            .flag-row {
+                padding: 0 5px;
+            }
+
+            .flag-row img {
+                height: 15px;
+                margin: 7px 1px;
+            }
+
+            .contact-bar {
+                position: static;
+                width: 100%;
+                padding: 10px;
+                box-sizing: border-box;
+                background: #f5f5f5;
+            }
+
+            header {
+                width: 100%;
+                padding: 20px 10px;
+                margin: 0;
+                min-height: auto;
+            }
+
+            .logo {
+                width: 150px;
+            }
+
+            h1 {
+                font-size: 1.8em;
+                margin: 10px 0;
+            }
+
+            .tagline {
+                font-size: 1em;
+            }
+
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+
+            nav ul li a {
+                display: block;
+                padding: 10px;
+            }
+
+            .content {
+                flex-direction: column;
+                margin: 10px;
+                gap: 20px;
+            }
+
+            .trending-posts {
+                width: 100%;
+                box-sizing: border-box;
+            }
+
+            .main-blog {
+                width: 100%;
+            }
+
+            .blog-post {
+                padding: 15px;
+            }
+
+            .blog-post h3 {
+                font-size: 1.4em;
+            }
+        }
+
+        /* Additional adjustments for very small screens */
+        @media screen and (max-width: 480px) {
+            .contact-bar {
+                font-size: 0.8em;
+            }
+
+            .contact-bar p {
+                margin: 3px 0;
+            }
+
+            h1 {
+                font-size: 1.5em;
+            }
+
+            .tagline {
+                font-size: 0.9em;
+            }
+
+            .blog-post h3 {
+                font-size: 1.2em;
+            }
+
+            .flag-row {
+                height: 25px;
+            }
+
+            .flag-row img {
+                height: 12px;
+            }
+        }
     </style>
 </head>
 
